Wed Nov  5 21:02:26 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcolorsel.c (update_color): 
	(make_label_spinbutton): 
	(adjustment_changed): Change the ranges for Saturation and
	Value to be 0-100 instead of 0-255, since these axes of HSV
	are usually expressed in percent.  (#121519, Gregory Merchan)

Wed Nov  5 08:51:48 GMT 2003  Tony Gale <gale@gtk.org>

	* docs/faq/gtk-faq.sgml: More 2.x updates

Tue Nov  4 15:00:33 GMT 2003  Tony Gale <gale@gtk.org>

	* docs/faq/gtk-faq.sgml: More 2.x updates, fix
	pkg-config command error, update copyright.

2003-11-03  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (error_dialog): Take in a path as
	well.  Use a helper function.
	(shortcuts_append_home): Display an error box if necessary.
	(shortcuts_append_desktop): Likewise.
	(add_bookmark_button_clicked_cb): Likewise.
	(gtk_file_chooser_default_select_path): Likewise.
	(entry_activate): Likewise.
	(shortcuts_append_paths): New helper function.
	(shortcuts_append_file_system_roots): Use
	shortcuts_append_paths().
	(shortcuts_append_bookmarks): Likewise.

Mon Nov  3 23:12:41 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkuimanager.c (_gtk_menu_is_empty): Return TRUE if 
	menu is NULL.
	(update_smart_separators): Remove some unneeded ifs.

Mon Nov  3 22:45:58 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkwindow-decorate.h: Add G_BEGIN_DECLS/G_END_DECLS to make 
	these usable in C++. Forgot this file in my Oct 11 commit.

2003-11-03  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (create_shortcuts_tree): Add a stock
	icon to the "Add bookmark" button.

	* gtk/gtkfilesystemunix.c: Mark missing strings for translation.
	* gtk/gtkfilesystemmodel.c: Likewise.
	* gtk/gtkfilechooser.c: Likewise.
	* gtk/gtkfilechooserdefault.c: Likewise.

Mon Nov  3 20:56:28 2003  Matthias Clasen  <maclas@gmx.de>

	* gdk/gdk.c: 
	* gdk/gdkinternals.h: 
	* gdk/x11/gdkscreen-x11.c (init_xinerama_support): Introduce a