@@ -1,3 +1,8 @@
+Wed Nov  5 21:07:58 2003  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkpaned.c (gtk_paned_class_init): Add readonly properties
+	min-position and max-position.  (#58431, Padraig O'Briain)
+
 Wed Nov  5 21:02:26 2003  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkcolorsel.c (update_color): 
